# electora-py

./: .editorconfig  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: check_codebase.yml
electora_py/: __init__.py  api.py  cli.py  setup.cfg
